--- a/nasm/man1/nasm.1
+++ b/nasm/man1/nasm.1
@@ -2,12 +2,12 @@
 .\"     Title: nasm
 .\"    Author: [FIXME: author] [see http://www.docbook.org/tdg5/en/html/author]
 .\" Generator: DocBook XSL Stylesheets vsnapshot <http://docbook.sf.net/>
-.\"      Date: 12/26/2018
+.\"      Date: 07/17/2020
 .\"    Manual: The Netwide Assembler Project
 .\"    Source: NASM
 .\"  Language: English
 .\"
-.TH "NASM" "1" "12/26/2018" "NASM" "The Netwide Assembler Project"
+.TH "NASM" "1" "07/17/2020" "NASM" "The Netwide Assembler Project"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -244,7 +244,7 @@ to exit immediately, after displaying its version number\&.
 Causes
 \fBnasm\fR
 to enable or disable certain classes of warning messages, in gcc\-like style, for example
-\fB\-Worphan\-labels\fR
+\fB\-Wlabel\-orphan\fR
 or
 \fB\-Wno\-orphan\-labels\fR\&.
 .RE
@@ -254,7 +254,7 @@ or
 Causes
 \fBnasm\fR
 to enable or disable certain classes of warning messages, for example
-\fB\-w+orphan\-labels\fR
+\fB\-w+label\-orphan\fR
 or
 \fB\-w\-macro\-params\fR\&.
 .RE
